--- a/.travis.yml
+++ b/.travis.yml
@@ -46,3 +46,6 @@ jobs:
     - name: android_test
       if: (type = push AND branch IN (master, dev)) OR (type = pull_request)
       script: ./run_tests_on_firebase_test_lab.sh
+
+before_install:
+  openssl aes-256-cbc -K $encrypted_292693e08117_key -iv $encrypted_292693e08117_iv -in gcloud-service-key.json.enc -out gcloud-service-key.json -d
