--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-       
+        <service
+            android:name=".PedometerService"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".StartPage"
             android:label="@string/title_activity_start_page"
@@ -23,9 +27,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".IntentionalWalkActivity"
             android:label="@string/title_activity_intentional_walk"
@@ -36,4 +38,5 @@
                 android:value="cse110.ucsd.team12wwr.MainActivity" />
         </activity>
     </application>
+
 </manifest>
