--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RouteInfoActivity"></activity>
+        <activity android:name=".RouteDetailsPage"></activity>
+        <activity android:name=".RouteInfoActivity" />
         <activity
             android:name=".StartPage"
             android:label="@string/title_activity_start_page"
