--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SuggestedWalkActivity"></activity>
         <activity
-
             android:name=".TeamIndividRoutes"
             android:label="@string/title_activity_team_individ_routes"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".TeamScreen"
             android:label="@string/title_activity_team_screen"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RoutesScreen" />
         <activity android:name=".RouteInfoActivity" />
         <activity android:name=".RouteDetailsPage" />
