US #6 Created ProposedActivity without voting capability

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ProposedWalkScreen"></activity>
         <activity
             android:name=".TeamIndividRoutes"
             android:label="@string/title_activity_team_individ_routes"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".PendingInviteActivity"
             android:label="Your Invitations" />
