--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SuggestedWalkActivity"></activity>
+        <activity
+            android:name=".InviteWalk"
+            android:label="@string/title_activity_invite_walk"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+<!--        <activity android:name=".SuggestedWalkActivity" />-->
         <activity
             android:name=".TeamIndividRoutes"
             android:label="@string/title_activity_team_individ_routes"
@@ -43,7 +47,7 @@
             android:name=".IntentionalWalkActivity"
             android:label="@string/title_activity_intentional_walk"
             android:parentActivityName=".MainActivity"
-            android:screenOrientation="portrait"
+            android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
